# mon-panel

./: Cargo.toml  README.md  config.example.toml  flake.nix
src/: animation.rs  config.rs  main.rs  render.rs  telemetry.rs  window.rs
