[package]
name = "mon-panel"
version = "0.1.0"
edition = "2021"

[dependencies]
x11rb = "0.13"
cairo = { version = "0.20", package = "cairo-rs" }
pango = "0.20"
pangocairo = "0.20"
glib = "0.20"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
opt-level = 2
lto = true